# spritepacker

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: main.cpp  options.cpp  options.hpp  sprite_packer.cpp  sprite_packer.hpp  sprites.cpp  sprites.hpp  utils.cpp  utils.hpp  version.hpp.in
tests/: test_options.cpp  test_sprite_packer.cpp  test_sprites.cpp  test_utils.cpp
